# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library contains all protos used in the app and is a dependency for all other modules.
In Bazel, proto files are built using the proto_library() and java_lite_proto_library() rules.
The proto_library() rule creates a proto file library to be used in multiple languages.
The java_lite_proto_library() rule takes in a proto_library target and generates java code.
"""

load("@rules_java//java:defs.bzl", "java_lite_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//model:src/main/proto/format_import_proto_library.bzl", "format_import_proto_library")

# NOTE TO DEVELOPERS: When adding new protos, each proto will need to have both a proto_library
# and java_lite_proto_library. See the examples below for context. Further, once the proto lite
# library is added, it should be included in the exports list in the model library at the
# bottom of this file so that other parts of the app get access to it. If protos import other
# protos, they need to use format_import_proto_library (again, see examples below for how to do
# this).
#
# For example, if adding a new proto file called 'important_structure.proto', add these:
#   proto_library(
#       name = "important_structure_proto",
#       srcs = ["src/main/proto/important_structure.proto"],
#   )
#
#   java_lite_proto_library(
#       name = "important_structure_java_proto_lite",
#       deps = [":important_structure_proto"],
#   )
#
# And change the 'model' library at the bottom of the file, e.g.:
#   android_library(
#       name = "model",
#       exports = [
#           ...
#           ":important_structure_java_proto_lite",
#           ...
#       ],
#       ...
#   )

proto_library(
    name = "arguments_proto",
    srcs = ["src/main/proto/arguments.proto"],
)

java_lite_proto_library(
    name = "arguments_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":arguments_proto"],
)

proto_library(
    name = "event_logger_proto",
    srcs = ["src/main/proto/oppia_logger.proto"],
)

java_lite_proto_library(
    name = "event_logger_java_proto_lite",
    visibility = ["//visibility:public"],
    deps = [":event_logger_proto"],
)

format_import_proto_library(
    name = "exploration_checkpoint",
    src = "src/main/proto/exploration_checkpoint.proto",
    deps = [":exploration_proto"],
)

java_lite_proto_library(
    name = "exploration_checkpoint_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":exploration_checkpoint_proto"],
)

proto_library(
    name = "interaction_object_proto",
    srcs = ["src/main/proto/interaction_object.proto"],
)

java_lite_proto_library(
    name = "interaction_object_java_proto_lite",
    visibility = ["//visibility:public"],
    deps = [":interaction_object_proto"],
)

proto_library(
    name = "languages_proto",
    srcs = ["src/main/proto/languages.proto"],
    visibility = ["//visibility:public"],
)

java_lite_proto_library(
    name = "languages_java_proto_lite",
    visibility = ["//visibility:public"],
    deps = [":languages_proto"],
)

proto_library(
    name = "onboarding_proto",
    srcs = ["src/main/proto/onboarding.proto"],
)

java_lite_proto_library(
    name = "onboarding_java_proto_lite",
    visibility = ["//visibility:public"],
    deps = [":onboarding_proto"],
)

proto_library(
    name = "profile_proto",
    srcs = ["src/main/proto/profile.proto"],
)

java_lite_proto_library(
    name = "profile_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":profile_proto"],
)

proto_library(
    name = "subtitled_html_proto",
    srcs = ["src/main/proto/subtitled_html.proto"],
)

java_lite_proto_library(
    name = "subtitled_html_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":subtitled_html_proto"],
)

proto_library(
    name = "subtitled_unicode_proto",
    srcs = ["src/main/proto/subtitled_unicode.proto"],
)

java_lite_proto_library(
    name = "subtitled_unicode_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":subtitled_unicode_proto"],
)

proto_library(
    name = "test_proto",
    srcs = ["src/main/proto/test.proto"],
)

java_lite_proto_library(
    name = "test_java_proto_lite",
    deps = [":test_proto"],
)

proto_library(
    name = "thumbnail_proto",
    srcs = ["src/main/proto/thumbnail.proto"],
)

java_lite_proto_library(
    name = "thumbnail_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":thumbnail_proto"],
)

proto_library(
    name = "translation_proto",
    srcs = ["src/main/proto/translation.proto"],
)

java_lite_proto_library(
    name = "translation_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":translation_proto"],
)

proto_library(
    name = "voiceover_proto",
    srcs = ["src/main/proto/voiceover.proto"],
)

java_lite_proto_library(
    name = "voiceover_java_proto_lite",
    deps = [":voiceover_proto"],
)

proto_library(
    name = "route_proto",
    src = ["src/main/proto/route.proto"],
)

java_lite_proto_library(
    name = "route_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":profile_proto"],
)

format_import_proto_library(
    name = "feedback_reporting",
    src = "src/main/proto/feedback_reporting.proto",
    deps = [
        ":profile_proto",
    ],
)

java_lite_proto_library(
    name = "feedback_reporting_java_proto_lite",
    deps = [":feedback_reporting_proto"],
)

format_import_proto_library(
    name = "question",
    src = "src/main/proto/question.proto",
    deps = [
        ":exploration_proto",
        ":subtitled_html_proto",
        ":subtitled_unicode_proto",
    ],
)

java_lite_proto_library(
    name = "question_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":question_proto"],
)

format_import_proto_library(
    name = "topic",
    src = "src/main/proto/topic.proto",
    visibility = ["//visibility:public"],
    deps = [
        ":subtitled_html_proto",
        ":subtitled_unicode_proto",
        ":thumbnail_proto",
        ":translation_proto",
        ":voiceover_proto",
    ],
)

java_lite_proto_library(
    name = "topic_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":topic_proto"],
)

format_import_proto_library(
    name = "exploration",
    src = "src/main/proto/exploration.proto",
    visibility = ["//visibility:public"],
    deps = [
        ":interaction_object_proto",
        ":subtitled_html_proto",
        ":subtitled_unicode_proto",
        ":translation_proto",
        ":voiceover_proto",
    ],
)

java_lite_proto_library(
    name = "exploration_java_proto_lite",
    visibility = ["//visibility:public"],
    deps = [":exploration_proto"],
)

format_import_proto_library(
    name = "platform_parameter",
    src = "src/main/proto/platform_parameter.proto",
)

java_lite_proto_library(
    name = "platform_parameter_java_proto_lite",
    visibility = ["//:oppia_api_visibility"],
    deps = [":platform_parameter_proto"],
)

android_library(
    name = "test_models",
    testonly = True,
    visibility = ["//visibility:public"],
    exports = [
        ":test_java_proto_lite",
    ],
)
