"""
Kotlin-based scripts to help developers or perform continuous integration tasks.
"""

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary")

# Visibility for libraries that should be accessible to script tests.
package_group(
    name = "oppia_script_test_visibility",
    packages = ["//scripts/src/javatests/..."],
)

# Visibility for libraries that have binaries defined at this package & tests.
package_group(
    name = "oppia_script_binary_visibility",
    includes = [":oppia_script_test_visibility"],
    packages = ["//scripts"],
)

# Visibility for libraries that should be accessible to other script packages & tests.
package_group(
    name = "oppia_script_library_visibility",
    includes = [":oppia_script_test_visibility"],
    packages = ["//scripts/src/java/..."],
)

# Visibility for libraries that should be accessible to script testing packages.
package_group(
    name = "oppia_script_testing_library_visibility",
    includes = [":oppia_script_test_visibility"],
    packages = ["//scripts/src/java/org/oppia/android/scripts/testing"],
)

java_binary(
    name = "compute_aab_differences",
    testonly = True,
    data = ["@androidsdk//:aapt2_binary"],
    main_class = "org.oppia.android.scripts.apkstats.ComputeAabDifferencesKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/apkstats:compute_aab_differences_lib"],
)

java_binary(
    name = "compute_affected_tests",
    testonly = True,
    main_class = "org.oppia.android.scripts.ci.ComputeAffectedTestsKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/ci:compute_affected_tests_lib"],
)

java_binary(
    name = "retrieve_affected_tests",
    testonly = True,
    main_class = "org.oppia.android.scripts.ci.RetrieveAffectedTestsKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/ci:retrieve_affected_tests_lib"],
)

java_binary(
    name = "regex_pattern_validation_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.regex.RegexPatternValidationCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/regex:regex_pattern_validation_check_lib"],
)

java_binary(
    name = "xml_syntax_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.xml.XmlSyntaxCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/xml:xml_syntax_check_lib"],
)

java_binary(
    name = "string_language_translation_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.xml.StringLanguageTranslationCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/xml:string_language_translation_check_lib"],
)

java_binary(
    name = "string_resource_validation_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.xml.StringResourceValidationCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/xml:string_resource_validation_check_lib"],
)

java_binary(
    name = "test_file_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.testfile.TestFileCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/testfile:test_file_check_lib"],
)

java_binary(
    name = "generate_maven_dependencies_list",
    testonly = True,
    main_class = "org.oppia.android.scripts.maven.GenerateMavenDependenciesListKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/maven:generate_maven_dependencies_list_lib"],
)

java_binary(
    name = "maven_dependencies_list_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.license.MavenDependenciesListCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/license:maven_dependencies_list_check_lib"],
)

java_binary(
    name = "retrieve_license_texts",
    testonly = True,
    main_class = "org.oppia.android.scripts.maven.RetrieveLicenseTextsKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/maven:retrieve_license_texts_lib"],
)

java_binary(
    name = "validate_maven_dependencies",
    main_class = "org.oppia.android.scripts.maven.ValidateMavenDependenciesKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/maven:validate_maven_dependencies_lib"],
)

java_binary(
    name = "license_texts_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.license.LicenseTextsCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/license:license_texts_check_lib"],
)

java_binary(
    name = "accessibility_label_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.label.AccessibilityLabelCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/label:accessibility_label_check_lib"],
)

java_binary(
    name = "kdoc_validity_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.docs.KdocValidityCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/docs:kdoc_validity_check_lib"],
)

java_binary(
    name = "todo_open_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.todo.TodoOpenCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/todo:todo_open_check_lib"],
)

java_binary(
    name = "todo_issue_resolved_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.todo.TodoIssueResolvedCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/todo:todo_issue_resolved_check_lib"],
)

java_binary(
    name = "todo_issue_comment_check",
    testonly = True,
    main_class = "org.oppia.android.scripts.todo.TodoIssueCommentCheckKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/todo:todo_issue_comment_check_lib"],
)

java_binary(
    name = "transform_android_manifest",
    main_class = "org.oppia.android.scripts.build.TransformAndroidManifestKt",
    visibility = ["//:oppia_binary_visibility"],
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/build:transform_android_manifest_lib"],
)

java_binary(
    name = "filter_per_language_resources",
    main_class = "org.oppia.android.scripts.build.FilterPerLanguageResourcesKt",
    visibility = ["//:oppia_binary_visibility"],
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/build:filter_per_language_resources_lib"],
)

java_binary(
    name = "suggest_build_fixes",
    main_class = "org.oppia.android.scripts.build.SuggestBuildFixesKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/build:suggest_build_fixes_lib"],
)

java_binary(
    name = "verify_file_targets",
    main_class = "org.oppia.android.scripts.build.VerifyFileTargetsKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/build:verify_file_targets_lib"],
)

java_binary(
    name = "bazel_setup_wizard",
    main_class = "org.oppia.android.scripts.build.BazelSetupWizardKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/build:bazel_setup_wizard_lib"],
)

java_binary(
    name = "buf",
    main_class = "org.oppia.android.scripts.lint.BufKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/lint:buf_lib"],
)

java_binary(
    name = "buildifier",
    main_class = "org.oppia.android.scripts.lint.BuildifierKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/lint:buildifier_lib"],
)

java_binary(
    name = "checkstyle",
    main_class = "org.oppia.android.scripts.lint.CheckstyleKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/lint:checkstyle_lib"],
)

java_binary(
    name = "ktlint",
    main_class = "org.oppia.android.scripts.lint.KtlintKt",
    visibility = ["//scripts/third_party:__pkg__"],
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/lint:ktlint_lib"],
)

java_binary(
    name = "pre_push_checks",
    main_class = "org.oppia.android.scripts.ci.PrePushChecksKt",
    runtime_deps = ["//scripts/src/java/org/oppia/android/scripts/ci:pre_push_checks_lib"],
)
