# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library contains fake objects used for testing as well as tests for these objects.
"""

package_group(
    name = "testing_testing_visibility",
    packages = ["//testing/src/test/..."],
)

package_group(
    name = "testing_visibility",
    includes = [":testing_testing_visibility"],
    packages = ["//testing/src/main/..."],
)
